; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/bhndb/extr_bhndb_pci.c_bhndb_pci_eio_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/bhndb/extr_bhndb_pci.c_bhndb_pci_eio_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bhndb_pci_eio = type { i32, %struct.bhndb_pci_probe*, i64, i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32*, i32, i32, i32 }
%struct.bhndb_pci_probe = type { i32 }

@bhndb_pci_eio_map = common dso_local global i32 0, align 4
@bhndb_pci_eio_tell = common dso_local global i32 0, align 4
@bhndb_pci_eio_read = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bhndb_pci_eio*, %struct.bhndb_pci_probe*)* @bhndb_pci_eio_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bhndb_pci_eio_init(%struct.bhndb_pci_eio* %0, %struct.bhndb_pci_probe* %1) #0 {
  %3 = alloca %struct.bhndb_pci_eio*, align 8
  %4 = alloca %struct.bhndb_pci_probe*, align 8
  store %struct.bhndb_pci_eio* %0, %struct.bhndb_pci_eio** %3, align 8
  store %struct.bhndb_pci_probe* %1, %struct.bhndb_pci_probe** %4, align 8
  %5 = load %struct.bhndb_pci_eio*, %struct.bhndb_pci_eio** %3, align 8
  %6 = call i32 @memset(%struct.bhndb_pci_eio* %5, i32 0, i32 56)
  %7 = load i32, i32* @bhndb_pci_eio_map, align 4
  %8 = load %struct.bhndb_pci_eio*, %struct.bhndb_pci_eio** %3, align 8
  %9 = getelementptr inbounds %struct.bhndb_pci_eio, %struct.bhndb_pci_eio* %8, i32 0, i32 4
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 3
  store i32 %7, i32* %10, align 8
  %11 = load i32, i32* @bhndb_pci_eio_tell, align 4
  %12 = load %struct.bhndb_pci_eio*, %struct.bhndb_pci_eio** %3, align 8
  %13 = getelementptr inbounds %struct.bhndb_pci_eio, %struct.bhndb_pci_eio* %12, i32 0, i32 4
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 2
  store i32 %11, i32* %14, align 4
  %15 = load i32, i32* @bhndb_pci_eio_read, align 4
  %16 = load %struct.bhndb_pci_eio*, %struct.bhndb_pci_eio** %3, align 8
  %17 = getelementptr inbounds %struct.bhndb_pci_eio, %struct.bhndb_pci_eio* %16, i32 0, i32 4
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  store i32 %15, i32* %18, align 8
  %19 = load %struct.bhndb_pci_eio*, %struct.bhndb_pci_eio** %3, align 8
  %20 = getelementptr inbounds %struct.bhndb_pci_eio, %struct.bhndb_pci_eio* %19, i32 0, i32 4
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  store i32* null, i32** %21, align 8
  %22 = load %struct.bhndb_pci_eio*, %struct.bhndb_pci_eio** %3, align 8
  %23 = getelementptr inbounds %struct.bhndb_pci_eio, %struct.bhndb_pci_eio* %22, i32 0, i32 0
  store i32 0, i32* %23, align 8
  %24 = load %struct.bhndb_pci_eio*, %struct.bhndb_pci_eio** %3, align 8
  %25 = getelementptr inbounds %struct.bhndb_pci_eio, %struct.bhndb_pci_eio* %24, i32 0, i32 3
  store i64 0, i64* %25, align 8
  %26 = load %struct.bhndb_pci_eio*, %struct.bhndb_pci_eio** %3, align 8
  %27 = getelementptr inbounds %struct.bhndb_pci_eio, %struct.bhndb_pci_eio* %26, i32 0, i32 2
  store i64 0, i64* %27, align 8
  %28 = load %struct.bhndb_pci_probe*, %struct.bhndb_pci_probe** %4, align 8
  %29 = load %struct.bhndb_pci_eio*, %struct.bhndb_pci_eio** %3, align 8
  %30 = getelementptr inbounds %struct.bhndb_pci_eio, %struct.bhndb_pci_eio* %29, i32 0, i32 1
  store %struct.bhndb_pci_probe* %28, %struct.bhndb_pci_probe** %30, align 8
  ret void
}

declare dso_local i32 @memset(%struct.bhndb_pci_eio*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
